[package]
name = "os-sync"
version = "0.3.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Simple synchronization primitives based on OS semaphore"
readme = "README.md"
repository = "https://github.com/DoumanAsh/os-sync"
license = "BSL-1.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
keywords = ["sync", "semaphore"]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"
default-features = false

[target.'cfg(unix)'.dependencies]
error-code = "2"
